--- a/css/style.css
+++ b/css/style.css
@@ -76,3 +76,41 @@ input[type="submit"] {
 .tarjetas{
     cursor: pointer;
 }
+.secciones{
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+}
+.seccion {
+    display: inline-block;
+    margin-right: 10%;
+}
+.fondoBlack{
+    display: none;
+    width: 50%;
+    position: absolute;
+    margin-left: 20%;
+    top: 50px;
+    z-index: 16;
+}
+.tarjetaAbierta{
+    display: none;
+    position: absolute;
+    background-color: white;
+    padding: 50px;
+    border-radius: 10px;
+    margin-bottom: 50px;
+    z-index: 20;
+    
+}
+.dropBack{
+    display: none;
+    width: 100%;
+    height: 100%;
+    top:0;
+    left: 0;
+    position: fixed;
+    background-color: rgba(0, 0, 0, 0.459);
+    overflow: auto;
+    z-index: 10;
+}
+
